# PlateRecognizeSystem

./: CMakeLists.txt  README.md  main.cpp
